Update logic to include IE10+ custom protocol detection feature

--- a/index.html
+++ b/index.html
@@ -15,47 +15,15 @@
 </head>
 
 <body>
-    <a href="magnet:?xt=urn:btih:f4fb42b7088600bfc1df7239856d960bbb75e4b6&dn=Faker&tr=udp%3A%2F%2Ftracker.publicbt.com%3A80&tr=udp%3A%2F%2Fopen.demonii.com%3A1337" />Custom protocol: magnet:?</a>
+    <h4>Check skype protocol installation  by clicking on the link bellow</h4>
+    <div id="action">
+        <a  id="testLink" href="skype:dexter?call">Skype protocol detection</a>
+    </div>
 <br />
-    <a href="no-magnet:?xt=urn:btih:f4fb42b7088600bfc1df7239856d960bbb75e4b6&dn=Faker&tr=udp%3A%2F%2Ftracker.publicbt.com%3A80&tr=udp%3A%2F%2Fopen.demonii.com%3A1337" />Custom protocol:no-magnet: does not exist and has no handler</a>
-</body>
+    <b id="installResults"></b>&nbsp;
+<br />
 
-    <script type='text/javascript'>
-
-        var as = document.getElementsByTagName("a")[0];
-
-        as.addEventListener('click', function(event) { 
-                var found = false;
-                var c = window.setTimeout(function() {
-                            !found?console.log('It is not installed'):''; 
-                    }, 2000);
-
-                window.addEventListener('blur', function() {
-                    console.log("Custom url is installed and has a handler");
-                        found = true;               
-                }, false);
-
-                return false;
-
-        }, false);
-
-
-       var ns = document.getElementsByTagName('a')[1];
-       ns.addEventListener('click', function(event) { 
-                var found = false;
-                var c = window.setTimeout(function() {
-                            !found?console.log('It is not installed'):''; 
-                    }, 2000);
-
-                window.addEventListener('blur', function() {
-                    console.log("Custom url is installed and has a handler");
-                        found = true;               
-                }, false);
-
-                return false;
-
-        }, false);
-    
-</script>
+<script type="text/javascript" src="customProtocolDetection.js"></script>
+<body>
 </html>
 <!-- vim: set foldmethod=manual : -->
